first part of requested changes by lecturer